raffia/tests/error/scss/at-rule/else/else-only.snap
---
source: raffia/tests/error.rs
---
error: Sass `@else` at-rule is disallowed here
  ┌─ else-only.scss:1:1
  │
1 │ @else {}
  │ ^^^^^


